idtech_commits_output/vendor_idtech_cst_1361a08976ce911cef2b6b900df94875b79fe6c4_fix build break of bootloader.txt
1361a08 owen.wen 2021-09-09

fix build break of bootloader

Symptom: build break
Solution: align to python3 format

  File "./vendor/idtech/cst/sign_uboot.py", line 36
    print sig_info
                 ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(sig_info)?

Change-Id: I7fa803aba44fd533b9d7880c22867a9e74d53027

diff --git a/sign_uboot.py b/sign_uboot.py
index cbd6aed..221a36b 100755
--- a/sign_uboot.py
+++ b/sign_uboot.py
@@ -33,7 +33,7 @@ def GetImageSigInfo(filename):
             or line.lstrip().startswith("fit hab block:")):
       k, v = line.lstrip().split("	", 1)
       sig_info[k.rstrip()] = v.strip('	').strip('
')
-  print sig_info
+  print(sig_info)
   f.close()
 
 def GetImageHabInfo(filename):
